--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Gutenberg component that allows you to attach posts and pages to a custom block",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build src/index.js -d ./"
+    "build": "webpack --config webpack.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,10 @@
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-react": "^7.0.0",
     "@wordpress/babel-plugin-import-jsx-pragma": "^1.1.3",
-    "parcel": "^1.11.0"
+    "css-loader": "^2.1.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.30.0"
   },
   "dependencies": {
     "react": "^16.7.0"
